v1.0.0/modules/schema/pages/class/DecimalQuantity.adoc
= `DecimalQuantity`
:toclevels: 4


+++Quantity with decimal value and associated unit or currency information.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DecimalQuantity`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`DecimalQuantity`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<currency,`currency`>>
| 0..1
| xref::enumeration/Currency.adoc[`Currency`]
| +++Currency of this quantity.+++

| <<multiplier,`multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Unit multiplier of this quantity.+++

| <<unit,`unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Unit of this quantity.+++

| <<value,`value`>>
| 0..1
| https://w3id.org/linkml/Double[`double`]
| +++Value of this quantity.+++
|===

'''


//[discrete]
[#currency]
=== `currency`
+++Currency of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DecimalQuantity.currency`
| Cardinality
| 0..1
| Type
| xref::enumeration/Currency.adoc[`Currency`]


|===

//[discrete]
[#multiplier]
=== `multiplier`
+++Unit multiplier of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DecimalQuantity.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]


|===

//[discrete]
[#unit]
=== `unit`
+++Unit of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DecimalQuantity.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]


|===

//[discrete]
[#value]
=== `value`
+++Value of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DecimalQuantity.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Double[`double`]


|===


